HACK fix the vertical overflow
This definitely needs to be revamped

--- a/app/stylesheets/index.styl
+++ b/app/stylesheets/index.styl
@@ -4,7 +4,6 @@ html, body
   min-height: 300px
   min-width: 300px
   background-color: #ECECEC
-  overflow: hidden
 
 /* Padding for the main content */
 #topMenu
@@ -21,8 +20,11 @@ md-toolbar
   background: #FFFFFF
   height: 80%
   width: 80%
+  /* TODO shouldn't have to be explicit here */
+  min-height: 520px
   margin: auto
   margin-top: 70px
+  margin-bottom: 70px
   overflow: hidden
 
   #topRow
